--- a/app/rasa/credentials.yml
+++ b/app/rasa/credentials.yml
@@ -1,7 +1,7 @@
 custom_telegram.CustomTelegramInput:
-  access_token: null
-  verify: null
-  webhook_url: null
+  access_token: 6627305882:AAGgpOE5KF2AoZxvXbpT1SQEqrzWslw_Aw4
+  verify: gigit_rasa_bot
+  webhook_url: https://2236-42-61-232-226.ngrok-free.app/webhooks/telegram/webhook
 rasa:
   url: http://rasa-core:5005/webhook
 rest: null
